samples/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-a
  name: service-a
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30000
  selector:
    app: service-a
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-b
  name: service-b
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    app: service-b
  type: NodePort
